<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_gravity="center"
        android:id="@+id/animation_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/error_404" />

    <TextView
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textAppearance="@style/TitleTextAppearance"
        android:text="@string/oops"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/tvSubTitle"
        android:textAppearance="@style/TitleTextAppearance"
        android:text="@string/there_no_Internet"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textAppearance="@style/TitleMediumTextAppearance"
        android:textColor="@color/grey_979797"
        android:text="@string/keep_calm"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/tvSubDescription"
        android:textAppearance="@style/TitleMediumTextAppearance"
        android:textColor="@color/grey_979797"
        android:text="@string/just_check_connection"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        app:backgroundTint="@color/mercadolibre_yellow_dark"
        app:cornerRadius="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn_retry"
        android:text="@string/retry"
        android:textColor="@color/black_222222"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>