<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/content_article_detail_title_info_height"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgArticle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineImageLimited"
        android:contentDescription="@string/content_description_image_article"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:scaleType="centerCrop"
        tools:src="@drawable/samsung_example" />

    <View
        android:id="@+id/bg"
        android:layout_marginTop="-30dp"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/mercadolibre_yellow_light"
        android:background="@drawable/rectangle_top_corner_white"
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageLimited"
        app:layout_constraintGuide_percent=".70"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="4dp"
        android:background="@drawable/rectangle_corner_4_white"
        android:textSize="12sp"
        tools:visibility="visible"
        android:visibility="gone"
        android:id="@+id/lbShipping"
        android:layout_margin="16dp"
        style="@style/FreeShippingText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/shipping" />

    <TextView
        tools:visibility="visible"
        android:visibility="gone"
        android:textSize="14sp"
        android:layout_marginBottom="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bg"
        style="@style/FreeRecommendedText"
        android:id="@+id/lbRecommended"
        android:text="@string/recommended" />

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvOriginalPrice"
        android:textAppearance="@style/TitleMediumTextAppearance"
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Samsung Galaxy A04s 128 Gb Verde 4 Gb Ram"
        android:textColor="@color/white"
        android:textSize="@dimen/article_detail_title_text" />

    <TextView
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvPrice"
        android:id="@+id/tvOriginalPrice"
        android:textAppearance="@style/TitleSmallTextAppearance"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$12.000.000"
        android:textColor="@color/white"
        android:textSize="@dimen/article_detail_original_price_text" />

    <TextView
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/tvPrice"
        android:textAppearance="@style/TitleSmallBoldTextAppearance"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$12.000.000"
        android:textColor="@color/black_222222"
        android:textSize="@dimen/article_detail_price_text" />
</androidx.constraintlayout.widget.ConstraintLayout>